Check whether kwallet is enabled in Wallet::isOpen(name)

If kwallet is disabled, walletlauncher() fails to start the service and
walletLauncher()->getInterface().isOpen(name) causes a crash.
This affects e.g. drkonqi, but probably also other applications.

Return false in this case, if kwallet is disabled a wallet cannot be
open either.

BUG: 358260
FIXED-IN: 5.27.0
REVIEW: 128831